# little-crab

./: .env  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  OPENCRAB_STRENGTH_ANALYSIS.md  README.ko.md  README.md  pyproject.toml
.codex/ralph/: prd.json  progress.txt
.github/workflows/: ci.yml
apps/api/: main.py
apps/web/: .gitignore  package-lock.json  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/dashboard/: page.tsx
apps/web/components/: FileExplorer.tsx  GraphView.tsx  RightPanel.tsx
apps/web/lib/: api.ts
docs/: 2026-03-26-lancedb-evaluation.md  2026-03-26-polaris-adaptation-for-little-crab.md  AGENT_SESSION_EVIDENCE.md  ARCHITECTURE.md  CURRENT_STATE.md  EXTRACTOR_DELTA_INVENTORY.md  FORK_BOUNDARY.md  IMPACT_SUMMARY.md  LAYERS.md  MCP_DOGFOODING.md  MCP_PROTOCOL_COMPATIBILITY_INVENTORY.md  PHASE3_ADOPTION_REVIEW.md  README.md  ROADMAP.md  SKILLS_INTEGRATION.md  UPSTREAM_BACKLOG.md  UPSTREAM_TRAJECTORY.md  USAGE_GUIDE.md  WEB_UI_COMPATIBILITY_INVENTORY.md
docs/evidence/agent_sessions/2026-03-26-canonical/: bootstrap.json  scenario-1-manifest-node-edge.json  scenario-2-ingest-extract-query.json  scenario-3-rebac-impact-simulation.json  session_summary.json  session_summary.md  transcript.json
intelligence/: glossary.yaml
intelligence/handlers/: mcp_request.yaml
intelligence/manifests/: actions.yaml  datasets.yaml  entities.yaml
intelligence/policies/: repo_rules.yaml
intelligence/registry/: capabilities.yaml
intelligence/schemas/: duckdb_contracts.sql
opencrab/: cli.py  config.py  repo_intelligence.py  web_api.py
opencrab.egg-info/: SOURCES.txt  top_level.txt
opencrab/grammar/: validator.py
opencrab/mcp/: server.py  tools.py
opencrab/ontology/: __init__.py  builder.py  context_pipeline.py  extractor.py  impact.py  query.py  rebac.py
opencrab/stores/: __init__.py  chroma_store.py  contracts.py  duckdb_store.py  factory.py  ladybug_store.py  local_doc_store.py  mongo_store.py  neo4j_store.py  sql_store.py
opencrab_data/: graph.db  opencrab.db
opencrab_data/chroma/: chroma.sqlite3
scripts/: dogfood_mcp.py  seed_ontology.py  verify_repo_intelligence.py
server/: api.py
tests/: test_cli.py  test_dogfood_mcp.py  test_local_api.py  test_mcp.py  test_repo_intelligence.py  test_stores.py
