[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "little-crab"
version = "0.1.0"
description = "Local-first MCP ontology runtime preserving OpenCrab grammar with LadybugDB, DuckDB, and embedded ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "little-crab Contributors" }
]
keywords = ["mcp", "ontology", "graph", "agent", "knowledge-graph"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1",
    "real_ladybug>=0.15",
    "rich>=13.0",
    "duckdb>=1.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "chromadb>=0.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "PyYAML>=6.0",
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
littlecrab = "opencrab.cli:main"
little-crab = "opencrab.cli:main"
opencrab = "opencrab.cli:main"

[project.urls]
Homepage = "https://github.com/tteggu87/little-crab"
Repository = "https://github.com/tteggu87/little-crab"
Issues = "https://github.com/tteggu87/little-crab/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["opencrab*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["opencrab"]
omit = ["tests/*", "scripts/*"]

[tool.coverage.report]
show_missing = true
fail_under = 80
